--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
+    "start": "nodemon server",
     "start:dev": "webpack -w --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
