set up React Routes, routing to signin page

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server",
-    "start:dev": "webpack -w --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build-watch & npm run start-server ",
+    "build-watch": "webpack -w",
+    "start-server": "node server -e js,html server/index.js"
   },
   "keywords": [],
   "author": "",
